<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_location_category" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_allow_location"
            android:summary="@string/pref_allow_location_summary"
            android:title="@string/pref_allow_location_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_allow_location"
            android:key="pref_location_network"
            android:summary="@string/pref_location_network_summary"
            android:title="@string/pref_location_network_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_allow_location"
            android:key="pref_location_gps"
            android:summary="@string/pref_location_gps_summary"
            android:title="@string/pref_location_gps_title" />
    </PreferenceCategory>

</PreferenceScreen>
