<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_previous_session_category" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_restore"
            android:summary="@string/pref_restore_summary"
            android:title="@string/pref_restore_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_startup_location_category" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_startup_location"
            android:summary="@string/pref_startup_location_summary"
            android:title="@string/pref_startup_location_title" />
    </PreferenceCategory>

</PreferenceScreen>
